<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ListenToMusic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tabbarSearch">Search</string>
    <string name="tabbarTransfer">Transfer</string>
    <string name="tabbarMine">Mine</string>
    <string name="tabbarSetting">Setting</string>
    <!-- The label for use as a searchable item -->
    <string name="search_label">Music</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search Music</string>
    
    <string name="songTitle">songTitle</string>
    <string name="songArtist">songArtist</string>
    
</resources>